--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
     "next": "15.3.4",
