--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "eslint": "9.34.0",
+    "eslint-config-next": "15.5.2",
     "tailwindcss": "^4"
   }
 }
