--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,50 @@
 			"isBackground": true,
 			"problemMatcher": [],
 			"dependsOn": "Production Build"
+		},
+		{
+			"label": "Start Dev Docker Compose",
+			"type": "shell",
+			"command": "docker",
+			"args": [
+				"compose",
+				"-f",
+				"docker/dev/docker-compose.yml",
+				"up",
+				"--build",
+				"-d"
+			],
+			"group": "build",
+			"isBackground": true,
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"group": "docker"
+			}
+		},
+		{
+			"label": "Stop Dev Docker Compose",
+			"type": "shell",
+			"command": "docker",
+			"args": [
+				"compose",
+				"-f",
+				"docker/dev/docker-compose.yml",
+				"down"
+			],
+			"group": "build",
+			"isBackground": false,
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"group": "docker"
+			}
 		}
 	]
 }
