--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
 # Frontend
-BACKEND_URL=http://localhost:5025
-RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
+NEXT_PUBLIC_BACKEND_URL=http://localhost:5025
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
 
 # Backend
 DEBUG=True
