--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -2,9 +2,16 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+COPY package*.json ./
+RUN npm ci
+
 COPY . .
 
-RUN npm ci
+ARG NEXT_PUBLIC_BACKEND_URL
+ARG NEXT_PUBLIC_RECAPTCHA_SITE_KEY
+
+ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
+ENV NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
 
 RUN npm run build
 
