--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -5,23 +5,28 @@ services:
     build:
       context: ../../
       dockerfile: docker/prod/Dockerfile
+      args:
+        NEXT_PUBLIC_BACKEND_URL: ${NEXT_PUBLIC_BACKEND_URL}
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
     container_name: anigas-attire-frontend
     ports:
       - "3000:3000"
     env_file:
-      - ../../.env.prod
+      - ../../.env
     restart: unless-stopped
+    extra_hosts:
+      - "localhost:host-gateway"
     networks:
       - anigas-network
 
   backend:
-    image: infominsolutions/cashya-shoppy:latest
+    image: infominsolutions/cashya-shoppy:latest-dev
     pull_policy: always
     container_name: anigas-attire-backend
     ports:
-      - "5025:5025"
+      - "8000:8000"
     env_file:
-      - ../../.env.prod
+      - ../../.env
     restart: unless-stopped
     networks:
       - anigas-network
