--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -7,13 +7,7 @@ RUN npm ci
 
 COPY . .
 
-ARG NEXT_PUBLIC_BACKEND_URL
-ARG NEXT_PUBLIC_RECAPTCHA_SITE_KEY
-
-ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
-ENV NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
-
-RUN npm run build
+RUN source .env && npm run build
 
 EXPOSE 3000
 
