refactor: update Docker Compose configurations to include backend data volume and clean up .gitignore

--- a/docker/dev/compose.yml
+++ b/docker/dev/compose.yml
@@ -41,6 +41,8 @@ services:
     restart: unless-stopped
     networks:
       - anigas-network-dev
+    volumes:
+      - ../../backend-data:/app/data
 
 networks:
   anigas-network-dev:
