refactor: update backend image tag and pull policy in Docker Compose

--- a/docker/dev/compose.yml
+++ b/docker/dev/compose.yml
@@ -29,8 +29,8 @@ services:
     tty: true
 
   backend:
-    image: infominsolutions/cashya-shoppy:latest
-    pull_policy: missing  # Use local image for faster dev startup
+    image: infominsolutions/cashya-shoppy:latest-dev
+    pull_policy: always
     container_name: anigas-attire-backend-dev
     ports:
       - "5025:5025"
