Revert "refactor: update Docker Compose configurations and enhance API configuration handling in Next.js"
This reverts commit 72a72323144470431277c34e4d435a12b9570570.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "args": [
                 "compose",
                 "-f",
-                "docker/dev/compose.yml",
+                "docker/dev/docker-compose.yml",
                 "up",
                 "--build",
                 "-d"
@@ -35,7 +35,7 @@
             "args": [
                 "compose",
                 "-f",
-                "docker/dev/compose.yml",
+                "docker/dev/docker-compose.yml",
                 "restart"
             ],
             "problemMatcher": [],
@@ -56,7 +56,7 @@
             "args": [
                 "compose",
                 "-f",
-                "docker/prod/compose.yml",
+                "docker/prod/docker-compose.yml",
                 "up",
                 "--build",
                 "-d"
@@ -80,7 +80,7 @@
             "args": [
                 "compose",
                 "-f",
-                "docker/prod/compose.yml",
+                "docker/prod/docker-compose.yml",
                 "restart"
             ],
             "problemMatcher": [],
