--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,9 @@
 # Frontend
-NEXT_PUBLIC_BACKEND_URL=http://localhost:5025
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
 
 # Backend
-DEBUG=True
+DEBUG=1
+ALLOWED_HOSTS=localhost,127.0.0.1
 RECAPTCHA_SECRET_KEY=your_recaptcha_secret_key_here
 TOTP_SECRET=your_totp_secret_here
